--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -8,7 +8,7 @@ Statically-typed languages---languages that use static type systems---must verif
 
 The second incompatibility is the support for parametricity.  Parametricity ensures that parametric polymorphic functions from statically-typed languages behave the same regardless of the types and values of their arguments, and that those functions with variable result types produce as their results an argument with the same variable type.  Dynamically-typed functions can use type predicates and conditions to determine their behavior by the types and values of their arguments.  If dynamically-typed functions are used as parametric polymorphic functions in languages that support parametricity, they can break parametricity.  Arguments for these functions must be wrapped such that type predicates and conditions cannot examine them.
 
-The third incompatibility is the evaluation strategy.  Evaluation strategies determine the order in which languages evaluate expressions.  Eager evaluation reduces reducible expressions regardless of necessity, and lazy evaluation reduces reducible expressions only where necessary.  Lazy languages---languages using lazy evaluation---can construct infinite streams as lists because they do not evaluate list elements when lists are constructed, but eager languages cannot because they do.  Therefore there are some lazy lists---lists in lazy languages---for which there are no equivalent eager lists.  Since lazy lists cannot be mechanically converted to eager lists, lazy lists cannot cross to eager languages.  Instead, elements of lazy lists can cross when accessed by eager languages if they are not lazy lists too.
+The third incompatibility is the evaluation strategy.  Evaluation strategies determine the order in which languages evaluate expressions.  Eager evaluation reduces expressions regardless of necessity, and lazy evaluation reduces expressions only where necessary.  Lazy languages---languages using lazy evaluation---can construct infinite streams as lists because they do not evaluate list elements when lists are constructed, but eager languages cannot because they do.  Therefore there are some lazy lists---lists in lazy languages---for which there are no equivalent eager lists.  Since lazy lists cannot be mechanically converted to eager lists, lazy lists cannot cross to eager languages.  Instead, elements of lazy lists can cross when accessed by eager languages if they are not lazy lists too.
 
 The languages in the model must be able to express programs in which the aforementioned three incompatibilities arise.  Haskell, ML, and Scheme each possess a unique combination of properties that together are sufficient for this purpose.  Haskell and ML use static type systems and support parametricity.  ML and Scheme use eager evaluation.  Haskell uses lazy evaluation.  Scheme uses a dynamic type system.  Any more languages would uselessly complicate the model.
 
