--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,7 @@
 Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between their languages that converts it from one form to another.  The boundary resolves conflicts between languages and must not violate the type system of either language.  This paper explores the resolution of conflicting type systems, conflicting preservation of parametricity, and conflicting evaluation strategies for a system of interoperation for Haskell, ML, and Scheme by defining a model of computation and interoperation, providing a proof of its type soundness, and describing an implementation of it.
 \end{abstract}
 \begin{acknowledgements}
-\indent\indent I want to thank my father and mother, Jerry and Jo Ann, for their encouragement, advice, and support, without which this would not have been possible.
+\indent\indent I want to thank my parents, Jerry and Jo Ann, for their encouragement, advice, and support, without which this would not have been possible.
 
 I want to thank my adviser, John Clements, for helping me along the way.  I very much appreciate the time he set aside for me and his advice.
 \end{acknowledgements}
